# frame-stamp

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  cgf_pipeline_requirements.txt  depconfig.json  pyproject.toml  release_config.json  requirements.txt  setup.py  todo.md
docs/: api.rst  conf.py  debug.rst  development.rst  dialog.rst  docs_config.json  environment_variables.rst  expressions.rst  faq.rst  index.rst  make_template.rst  tricks.rst  variables.rst  video.rst  viewer.rst
docs/shapes/: base_shape.rst  base_shapes.rst  column.rst  grid.rst  image.rst  index.rst  label.rst  line.rst  rect.rst  row.rst  tile.rst
examples/: example1.json  example1_overburn1.json  example2.json  example2_overburn2.json  example3_slate1.json  example3_slate2.json  example4_slate2.json  example_animation.json  gradient.json  grids.json  images.json  py_template.py  tiles.json  timeline.json  yml-template.yml
frame_stamp/: __init__.py  open_viewer.sh  stamp.py
frame_stamp/draw_driver/: __init__.py  pillow_engine.py
frame_stamp/shape/: __init__.py  base_shape.py  circle.py  column.py  grid.py  image.py  label.py  line.py  polygon.py  rect.py  rect2.py  row.py  tile.py
frame_stamp/utils/: __init__.py  b64.py  background_grig.py  batch.py  geometry_tools.py  image_tools.py  jsonc.py  point.py  pytemplate.py  rect.py  render_svg.py
frame_stamp/viewer/: canvas.py  create_grid_dialog.py  default_template.py  dialog.py  watch.py
tests/: conftest.py  test_b64.py  test_baseshape_rect.py  test_framestamp_basic.py  test_grid_shape.py  test_image_shape.py  test_label_shape.py  test_line_shape.py  test_tile_shape.py
tests/templates/: expressions_template.json  simple_template.json
