[tool.poetry]
name = "frame-stamp"
version = "0.1.8"
description = "Adding technical information to images using a template."
authors = ["paulwinex <paulwinex@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyside6 = "6.8.1"
pillow = "10.1.0"
pyyaml = "^6.0.2"
cairosvg = { version = "^2.7.1", optional = true }
recommonmark = "^0.7.1"


[tool.poetry.extras]
pyside = ["pyside6"]
svg = ["cairosvg"]

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
